{
  "version": 4,
  "terraform_version": "1.9.6",
  "serial": 1682,
  "lineage": "a5d0b1d0-cfd1-865f-3f60-c4fe3130c0de",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "eip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-00fd3cf963a334d6c",
            "arn": "arn:aws:ec2:us-west-2:212420391537:elastic-ip/eipalloc-00fd3cf963a334d6c",
            "domain": "vpc",
            "id": "eipalloc-00fd3cf963a334d6c",
            "network_border_group": "us-west-2",
            "private_dns": "ip-10-100-1-183.us-west-2.compute.internal",
            "public_dns": "ec2-52-39-38-254.us-west-2.compute.amazonaws.com",
            "public_ip": "52.39.38.254",
            "public_ipv4_pool": "amazon",
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "wordpress-instance",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-08d8ac128e0a1b91c",
            "arn": "arn:aws:ec2:us-west-2:212420391537:instance/i-0c0af151cc36e2b4c",
            "associate_public_ip_address": false,
            "availability_zone": "us-west-2a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0c0af151cc36e2b4c",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "keyss",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0b03a35ece9652ad4",
            "private_dns": "ip-10-100-3-56.us-west-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.100.3.56",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-08ff13b14ace38737",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "security_groups": [
              "sg-0e33b776b67ce5bce"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-09af27e4eb0aa691a",
            "tags": {
              "Name": "WordPress-Instance"
            },
            "tags_all": {
              "Name": "WordPress-Instance"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0e33b776b67ce5bce"
            ]
          },
          "dependencies": [
            "aws_db_instance.mysql",
            "aws_db_subnet_group.mysql_subnet_group",
            "aws_security_group.allow_ssh",
            "aws_security_group.bastion_sg",
            "aws_security_group.mysql_sg",
            "aws_subnet.private1",
            "aws_subnet.private2",
            "aws_vpc.vpc-sunny"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:212420391537:internet-gateway/igw-0adc75e735beeb767",
            "id": "igw-0adc75e735beeb767",
            "owner_id": "212420391537",
            "tags": {
              "Name": "vic-sunny-igw"
            },
            "tags_all": {
              "Name": "vic-sunny-igw"
            },
            "vpc_id": "vpc-00d3438e2aea66d2c"
          },
          "dependencies": [
            "aws_vpc.vpc-sunny"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "app_lb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-west-2:212420391537:loadbalancer/app/vic-sunny-lb/6893d7df27b5ffb4",
            "arn_suffix": "app/vic-sunny-lb/6893d7df27b5ffb4",
            "client_keep_alive": 3600,
            "connection_logs": [
              {
                "enabled": false
              }
            ],
            "desync_mitigation_mode": "defensive",
            "dns_name": "vic-sunny-lb-323567322.us-west-2.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "id": "arn:aws:elasticloadbalancing:us-west-2:212420391537:loadbalancer/app/vic-sunny-lb/6893d7df27b5ffb4",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "vic-sunny-lb",
            "preserve_host_header": false,
            "security_groups": [
              "sg-0224d8a163a862c3f"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-0d07d0921fd83b43b"
              },
              {
                "subnet_id": "subnet-0ffaa45e8b3b12a48"
              }
            ],
            "subnets": [
              "subnet-0d07d0921fd83b43b",
              "subnet-0ffaa45e8b3b12a48"
            ],
            "tags": {
              "Name": "vic-sunny-lb"
            },
            "tags_all": {
              "Name": "vic-sunny-lb"
            },
            "vpc_id": "vpc-00d3438e2aea66d2c",
            "xff_header_processing_mode": "append",
            "zone_id": "Z1H1FL5HABSF5"
          },
          "dependencies": [
            "aws_security_group.alb_sg",
            "aws_subnet.public1",
            "aws_subnet.public2",
            "aws_vpc.vpc-sunny"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "app_lb_listener",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-west-2:212420391537:listener/app/vic-sunny-lb/6893d7df27b5ffb4/1d6c8b6975cbd8de",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-west-2:212420391537:targetgroup/vic-sunny-tg/03895343f428645b",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-west-2:212420391537:listener/app/vic-sunny-lb/6893d7df27b5ffb4/1d6c8b6975cbd8de",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-west-2:212420391537:loadbalancer/app/vic-sunny-lb/6893d7df27b5ffb4",
            "mutual_authentication": [],
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": {},
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_lb.app_lb",
            "aws_lb_target_group.target_group",
            "aws_security_group.alb_sg",
            "aws_subnet.public1",
            "aws_subnet.public2",
            "aws_vpc.vpc-sunny"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "target_group",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-west-2:212420391537:targetgroup/vic-sunny-tg/03895343f428645b",
            "arn_suffix": "targetgroup/vic-sunny-tg/03895343f428645b",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 5,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-west-2:212420391537:targetgroup/vic-sunny-tg/03895343f428645b",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancer_arns": [
              "arn:aws:elasticloadbalancing:us-west-2:212420391537:loadbalancer/app/vic-sunny-lb/6893d7df27b5ffb4"
            ],
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "vic-sunny-tg",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "tags": {
              "Name": "vic-sunny-tg"
            },
            "tags_all": {
              "Name": "vic-sunny-tg"
            },
            "target_failover": [
              {
              }
            ],
            "target_group_health": [
              {
                "dns_failover": [
                  {
                    "minimum_healthy_targets_count": "1",
                    "minimum_healthy_targets_percentage": "off"
                  }
                ],
                "unhealthy_state_routing": [
                  {
                    "minimum_healthy_targets_count": 1,
                    "minimum_healthy_targets_percentage": "off"
                  }
                ]
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-00d3438e2aea66d2c"
          },
          "dependencies": [
            "aws_vpc.vpc-sunny"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:212420391537:route-table/rtb-013de903f66adab74",
            "id": "rtb-013de903f66adab74",
            "owner_id": "212420391537",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0f33082bb9f040fb7",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "vic-sunny-private-rt"
            },
            "tags_all": {
              "Name": "vic-sunny-private-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-00d3438e2aea66d2c"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.eip",
            "aws_nat_gateway.nat",
            "aws_subnet.public1",
            "aws_vpc.vpc-sunny"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:212420391537:route-table/rtb-0c50b3c00e1f733d0",
            "id": "rtb-0c50b3c00e1f733d0",
            "owner_id": "212420391537",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0adc75e735beeb767",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "vic-sunny-public-rt"
            },
            "tags_all": {
              "Name": "vic-sunny-public-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-00d3438e2aea66d2c"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_vpc.vpc-sunny"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0dbb7ebf64669dac4",
            "route_table_id": "rtb-013de903f66adab74",
            "subnet_id": "subnet-09af27e4eb0aa691a"
          },
          "dependencies": [
            "aws_eip.eip",
            "aws_nat_gateway.nat",
            "aws_route_table.private",
            "aws_subnet.private1",
            "aws_subnet.public1",
            "aws_vpc.vpc-sunny"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0f2a70811e42b53ff",
            "route_table_id": "rtb-013de903f66adab74",
            "subnet_id": "subnet-0d4318ae6674b15b0"
          },
          "dependencies": [
            "aws_eip.eip",
            "aws_nat_gateway.nat",
            "aws_route_table.private",
            "aws_subnet.private2",
            "aws_subnet.public1",
            "aws_vpc.vpc-sunny"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0c1ab24089ef3ed52",
            "route_table_id": "rtb-0c50b3c00e1f733d0",
            "subnet_id": "subnet-0d07d0921fd83b43b"
          },
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_route_table.public",
            "aws_subnet.public2",
            "aws_vpc.vpc-sunny"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "alb_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:212420391537:security-group/sg-0224d8a163a862c3f",
            "description": "Security group for the ALB allowing HTTP and HTTPS traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow all outbound traffic",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0224d8a163a862c3f",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow HTTP traffic from anywhere",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow HTTPS traffic from anywhere (if needed)",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              }
            ],
            "name": "alb-security-group",
            "name_prefix": "",
            "owner_id": "212420391537",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "alb-sg"
            },
            "tags_all": {
              "Name": "alb-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-00d3438e2aea66d2c"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.vpc-sunny"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "allow_ssh",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:212420391537:security-group/sg-0e33b776b67ce5bce",
            "description": "Allow SSH and HTTP inbound traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0e33b776b67ce5bce",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow HTTP",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow SSH",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "allow_ssh_http",
            "name_prefix": "",
            "owner_id": "212420391537",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "allow_ssh_http"
            },
            "tags_all": {
              "Name": "allow_ssh_http"
            },
            "timeouts": null,
            "vpc_id": "vpc-00d3438e2aea66d2c"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.vpc-sunny"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "bastion_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:212420391537:security-group/sg-0b14833f573a70526",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0b14833f573a70526",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "terraform-20241015083549161500000003",
            "name_prefix": "terraform-",
            "owner_id": "212420391537",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "Bastion_sg"
            },
            "tags_all": {
              "Name": "Bastion_sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-00d3438e2aea66d2c"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.vpc-sunny"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "mysql_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:212420391537:security-group/sg-0afd025752dc405b9",
            "description": "Security group for MySQL RDS instance",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow all outbound traffic",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0afd025752dc405b9",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "MySQL access from the bastion security group",
                "from_port": 3306,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0b14833f573a70526"
                ],
                "self": false,
                "to_port": 3306
              }
            ],
            "name": "mysql-rds-sg",
            "name_prefix": "",
            "owner_id": "212420391537",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "MySQL RDS Security Group"
            },
            "tags_all": {
              "Name": "MySQL RDS Security Group"
            },
            "timeouts": null,
            "vpc_id": "vpc-00d3438e2aea66d2c"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.bastion_sg",
            "aws_vpc.vpc-sunny"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:212420391537:subnet/subnet-09af27e4eb0aa691a",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2a",
            "availability_zone_id": "usw2-az1",
            "cidr_block": "10.100.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-09af27e4eb0aa691a",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "212420391537",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "vic-sunny-private-1"
            },
            "tags_all": {
              "Name": "vic-sunny-private-1"
            },
            "vpc_id": "vpc-00d3438e2aea66d2c"
          },
          "dependencies": [
            "aws_vpc.vpc-sunny"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:212420391537:subnet/subnet-0d4318ae6674b15b0",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2b",
            "availability_zone_id": "usw2-az2",
            "cidr_block": "10.100.4.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0d4318ae6674b15b0",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "212420391537",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "vic-sunny-private-2"
            },
            "tags_all": {
              "Name": "vic-sunny-private-2"
            },
            "vpc_id": "vpc-00d3438e2aea66d2c"
          },
          "dependencies": [
            "aws_vpc.vpc-sunny"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:212420391537:subnet/subnet-0ffaa45e8b3b12a48",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2a",
            "availability_zone_id": "usw2-az1",
            "cidr_block": "10.100.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0ffaa45e8b3b12a48",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "212420391537",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "vic-sunny-public-1"
            },
            "tags_all": {
              "Name": "vic-sunny-public-1"
            },
            "vpc_id": "vpc-00d3438e2aea66d2c"
          },
          "dependencies": [
            "aws_vpc.vpc-sunny"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:212420391537:subnet/subnet-0d07d0921fd83b43b",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2b",
            "availability_zone_id": "usw2-az2",
            "cidr_block": "10.100.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0d07d0921fd83b43b",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "212420391537",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "vic-sunny-public-2"
            },
            "tags_all": {
              "Name": "vic-sunny-public-2"
            },
            "vpc_id": "vpc-00d3438e2aea66d2c"
          },
          "dependencies": [
            "aws_vpc.vpc-sunny"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "vpc-sunny",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:212420391537:vpc/vpc-00d3438e2aea66d2c",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.100.0.0/16",
            "default_network_acl_id": "acl-048544998ff81c006",
            "default_route_table_id": "rtb-0f0ee8d38dc16bfdd",
            "default_security_group_id": "sg-0e9095d7745113d9e",
            "dhcp_options_id": "dopt-009e1fff06b5b031b",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-00d3438e2aea66d2c",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0f0ee8d38dc16bfdd",
            "owner_id": "212420391537",
            "tags": {
              "Name": "vic-sunny-vpc"
            },
            "tags_all": {
              "Name": "vic-sunny-vpc"
            }
          }
        }
      ]
    }
  ]
}